force-app/main/default/objects/Case/fields/BC_Return_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>BC_Return_Order_Id__c</fullName>
    <description>Business Central sales return order identifier for an approved warranty case.</description>
    <externalId>true</externalId>
    <label>BC Return Order ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>