force-app/main/default/objects/Case/fields/RMA_Status__c.field-meta.xml
<CustomField>
    <fullName>RMA_Status__c</fullName>
    <description>Lifecycle status for warranty return authorization.</description>
    <label>RMA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Not Required</fullName><default>true</default><label>Not Required</label></value>
            <value><fullName>Requested</fullName><default>false</default><label>Requested</label></value>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            <value><fullName>Sent to ERP</fullName><default>false</default><label>Sent to ERP</label></value>
            <value><fullName>Replacement Shipped</fullName><default>false</default><label>Replacement Shipped</label></value>
            <value><fullName>Closed</fullName><default>false</default><label>Closed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>