force-app/main/default/objects/Case/fields/Support_Process__c.field-meta.xml
<CustomField>
    <fullName>Support_Process__c</fullName>
    <description>Business process category used to route product and warranty support.</description>
    <label>Support Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Product Issue</fullName><default>true</default><label>Product Issue</label></value>
            <value><fullName>Warranty</fullName><default>false</default><label>Warranty</label></value>
            <value><fullName>Return</fullName><default>false</default><label>Return</label></value>
            <value><fullName>Billing</fullName><default>false</default><label>Billing</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>